use-case-c-programmatic-access-using-k8s-token/jwks-proxy-manifests.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: cluster-jwks-proxy
  name: cluster-jwks-proxy
  namespace: istio-system
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/name: cluster-jwks-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: cluster-jwks-proxy
  name: cluster-jwks-proxy
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cluster-jwks-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cluster-jwks-proxy
    spec:
      containers:
      - args:
        - proxy
        - --address=0.0.0.0
        - --port=8080
        - --accept-hosts=.*
        - --accept-paths=^(?:/openid/v1/jwks)|(?:/.well-known/openid-configuration)$
        - --reject-methods=^(POST|PUT|PATCH|DELETE|HEAD|OPTIONS|CONNECT|TRACE)$
        image: docker.io/bitnami/kubectl:1.30.4
        livenessProbe:
          httpGet:
            path: /openid/v1/jwks
            port: http
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
        name: kubectl-proxy
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /openid/v1/jwks
            port: http
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          httpGet:
            path: /openid/v1/jwks
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
      serviceAccountName: cluster-jwks-proxy
