use-case-c-programmatic-access-using-k8s-token/ml-pipeline-visualization-ap-l7-ml-pipeline.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ml-pipeline-visualizationserver-l7-ml-pipeline
  namespace: kubeflow-user-example-com
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/ml-pipeline
  targetRefs:
  - name: ml-pipeline-visualizationserver
    kind: Service
    group: ""
