use-case-c-programmatic-access-using-k8s-token/ns-ap-l4-waypoint.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ns-l4-waypoint
  namespace: kubeflow-user-example-com
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow-user-example-com/sa/waypoint
